--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1 class="site-title" id="site-title">Kin's Page</h1>
-    <div id="header" class="header"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i></div>
+    <div id="header" class="header unselectable"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i></div>
     <div id="sidebar" class="sidebar"></div>
     <div id="content" class="content"></div>
     <script src="./kins-page/main.js"></script>
