--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1 class="site-title" id="site-title">Kin's Page</h1>
+    <h1 class="site-title unselectable" id="site-title">Kin's Page</h1>
     <div id="header" class="header unselectable"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i></div>
     <div id="sidebar" class="sidebar"></div>
     <div id="content" class="content"></div>
