--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kin's Page</title>
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./kins-page/vs2015.css">
-    <link rel="stylesheet" href="./kins-page/style.css">
-</head>
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./kins-page/vs2015.css" />
+    <link rel="stylesheet" href="./kins-page/style.css" />
+  </head>
 
-<body>
+  <body class="hide-scrollbar">
     <h1 class="site-title unselectable" id="site-title">Kin's Page</h1>
-    <div id="header" class="header unselectable"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i></div>
-    <div id="sidebar" class="sidebar"></div>
+    <div id="header" class="header unselectable">
+      <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
+    </div>
+    <div id="sidebar" class="sidebar hide-scrollbar"></div>
     <div id="content" class="content"></div>
     <script src="./kins-page/main.js"></script>
-
-</body>
-
+  </body>
 </html>
