--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <div id="header" class="header unselectable">
       <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
     </div>
-    <div id="sidebar" class="sidebar hide-scrollbar"></div>
+    <div class="sidebar-container">
+      <div class="arrow"><i class="fa fa-chevron-right"></i></div>
+      <div id="sidebar" class="sidebar hide-scrollbar"></div>
+    </div>
+    
     <div id="content" class="content"></div>
     <script src="./kins-page/main.js"></script>
   </body>
