--- a/index.html
+++ b/index.html
@@ -25,221 +25,7 @@
       <div id="sidebar" class="sidebar hide-scrollbar"></div>
     </div>
 
-    <div id="content" class="content">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-      reprehenderit nesciunt voluptate ipsa nostrum! Quibusdam tempora eos,
-      quasi quod blanditiis ullam in quae voluptatibus fugit possimus deleniti
-      voluptatem maiores porro, sequi facere incidunt deserunt aut eveniet
-      explicabo dolor excepturi? Sed aspernatur, a aut officiis, suscipit
-      impedit ea laboriosam vitae tempore asperiores facere laudantium dolorem
-      rem iure inventore labore distinctio unde doloribus laborum tenetur? Illo
-      suscipit corrupti consequatur commodi. Fugit, numquam? Sit nobis suscipit
-      ipsa non corporis nesciunt minima quae. Ex architecto ratione quisquam
-      tempore aliquam officia ipsum dolorem iure repellendus nisi! Dolorum quod
-      eius at nulla ut perspiciatis quam cupiditate dolore, similique,
-      necessitatibus labore sed deleniti recusandae cumque. Magni voluptatem
-      excepturi omnis. Voluptatum voluptate quisquam aliquam eum dicta pariatur
-      repellendus ex repudiandae porro, eligendi, provident sit qui deleniti
-      accusantium fuga hic rerum similique, accusamus dolores in sapiente facere
-      ducimus aliquid molestiae. Unde, sapiente animi suscipit distinctio sequi
-      error voluptatibus earum obcaecati commodi quasi minus illum officia quia
-      nihil enim eos. Modi accusantium unde vero, omnis autem ab obcaecati
-      asperiores laboriosam ratione quidem voluptatum doloribus dolore nihil
-      expedita. Sapiente eos fugit illum quaerat perspiciatis soluta! Quod
-      ratione mollitia modi dolor quos dolore voluptate unde voluptas veritatis?
-      Sequi et ex, doloribus unde nemo eos ratione architecto nobis, magni
-      necessitatibus repudiandae deserunt. Nesciunt ratione rem sint, ipsa quod
-      libero nostrum soluta atque possimus quas, molestias explicabo tempora
-      ipsum omnis iste quos asperiores debitis commodi porro repellat facere
-      saepe velit. Expedita molestiae consequatur harum recusandae consectetur
-      ducimus eum excepturi quo sed fugit quos sequi modi repudiandae sint
-      adipisci aperiam dolores, mollitia ad libero minus voluptas numquam!
-      Asperiores animi, assumenda iure natus architecto autem id rem ab nemo
-      vero deleniti. Itaque quod temporibus sequi? Architecto placeat soluta
-      harum beatae minima aliquid debitis vitae accusantium nihil, temporibus
-      nulla adipisci vero asperiores sint fugiat alias magnam dolor. Earum
-      repellat soluta cum. Quam sapiente architecto assumenda. Illo amet
-      voluptates eligendi quod unde molestiae minima, voluptatum officia
-      pariatur obcaecati eius earum cumque omnis autem magnam nostrum? Quibusdam
-      nobis libero a sit officia odio ipsam nulla dolore autem veritatis
-      suscipit delectus, eos ducimus iste, maiores reprehenderit excepturi?
-      Quidem expedita, eaque ad fuga corporis vitae omnis commodi iusto
-      reprehenderit voluptates velit magnam hic cumque accusantium porro. Fugit
-      aut, sed sequi quidem impedit aspernatur, nisi corrupti laborum nulla
-      aperiam asperiores expedita deserunt ex placeat tempora! Perspiciatis
-      dignissimos nisi hic error sapiente magnam odit fugit porro vitae esse
-      ipsa perferendis, alias repudiandae rem commodi tempore totam, debitis
-      autem tempora sed adipisci laboriosam deserunt? Tempora eos nihil, omnis
-      vel ut quae labore exercitationem eaque? Veritatis laboriosam dolorem
-      magnam eius blanditiis corrupti! Eum cupiditate dignissimos temporibus,
-      culpa, alias ex illo beatae error delectus, mollitia repellendus sit odit
-      iste perferendis amet et vero cumque accusamus consequatur quam iusto
-      aliquid unde. Magni neque incidunt atque quisquam ipsam molestiae impedit
-      dolor fuga saepe ut harum tenetur, velit deleniti nostrum voluptas dolores
-      temporibus assumenda qui eveniet distinctio cum facere aspernatur? Saepe
-      error aperiam molestiae! Voluptatum libero, tenetur magnam autem
-      asperiores mollitia deleniti corporis quod aperiam, temporibus adipisci
-      laudantium aspernatur enim maiores amet hic ab consequuntur suscipit
-      nihil? Reprehenderit beatae voluptas nemo similique minima velit esse
-      explicabo optio consectetur id, quisquam ipsam excepturi iure rem, magni
-      laudantium alias officia accusamus. Eius cum a repellat aliquam neque
-      sequi eum ratione consectetur animi voluptas earum est quod dolor,
-      consequatur saepe harum tenetur quidem voluptatum, repellendus suscipit
-      dignissimos assumenda ad. Nostrum rem adipisci, id beatae eos consequuntur
-      deserunt a tenetur consequatur molestiae itaque voluptatibus accusamus
-      quia nesciunt provident unde eius sequi mollitia enim, fugiat vel illo.
-      Ullam sunt deleniti minima alias? Suscipit doloremque tempore minima quod.
-      Labore cupiditate ullam animi voluptate. Corrupti repellat autem
-      perferendis laboriosam enim facere molestias ea assumenda est, harum amet
-      asperiores unde sed corporis qui illo quas labore ipsam veritatis minus
-      eius magni reprehenderit nostrum? Esse blanditiis repudiandae unde error
-      debitis, dolorum quidem sapiente aspernatur repellat facilis quibusdam
-      optio corporis doloremque asperiores labore quia tempora excepturi!
-      Officiis, qui hic! Quia sequi doloremque quasi similique pariatur
-      explicabo repudiandae illo nulla assumenda, cum sit earum beatae
-      cupiditate fugiat. Officia consectetur ea doloremque culpa iusto rerum?
-      Nobis optio est quaerat modi, fuga, illo debitis voluptatibus suscipit
-      reiciendis eum facilis, illum maiores qui. Quam vero neque maxime minus a
-      nemo delectus! Incidunt dolore odio ut, natus aperiam, molestias ex, sed
-      odit veniam magnam laborum. Deserunt facere soluta minima ipsa facilis
-      doloribus neque ad quaerat laboriosam. Natus cumque labore nihil illum
-      minus hic dolorum sint veniam minima. Nihil accusantium sunt id sit
-      blanditiis reiciendis ipsa error inventore voluptates totam voluptas
-      doloribus fugit, obcaecati culpa eaque beatae ipsam maxime itaque odio
-      ratione, ullam omnis temporibus iste. Sequi ipsum saepe voluptate omnis
-      quibusdam illo commodi sapiente dolorum facilis eaque magnam fugit totam,
-      autem temporibus nemo consectetur vitae quod qui optio aspernatur earum
-      tempora vero! Explicabo suscipit quos pariatur, adipisci deserunt
-      reprehenderit consectetur magni corporis alias possimus reiciendis aperiam
-      in odit. Odio ab iste facilis ullam voluptates quibusdam quo libero itaque
-      deleniti. Quibusdam eaque distinctio, non dolor sint, corrupti quam
-      laudantium sequi error recusandae illo ullam porro hic quod facilis quis
-      aperiam, maiores et! Optio quidem mollitia autem, eligendi libero
-      laudantium, quaerat facilis quas animi repellendus veniam facere dolores
-      rem suscipit laborum neque iusto accusantium eius ab vel, recusandae
-      voluptatem ratione illo? Nesciunt nam et dolorem iusto accusamus quasi
-      tenetur eum sint repellendus incidunt, magni doloremque tempora impedit
-      provident veritatis assumenda corrupti distinctio rem voluptas sequi fuga
-      perspiciatis? Reiciendis quia amet ipsum enim cumque adipisci voluptatibus
-      accusamus ducimus vero nam consequuntur qui, ea, inventore laboriosam
-      magni optio sed obcaecati error vel praesentium incidunt sapiente
-      perspiciatis aspernatur. Nam officiis mollitia placeat odit veniam
-      laudantium quos voluptate autem nobis aliquam alias harum hic ipsam
-      quisquam ea repellat blanditiis facere reiciendis libero, necessitatibus
-      sit at et. Dolores voluptatibus deleniti, eius modi quia, ullam, sapiente
-      quidem inventore impedit qui ratione libero. Repellat, quia id minima
-      architecto porro nobis recusandae molestiae sequi esse soluta blanditiis
-      obcaecati sint ipsam aperiam. Dolor, assumenda sint, corrupti mollitia
-      quia commodi accusantium, voluptatum omnis porro praesentium quisquam
-      dicta illum. Placeat saepe molestiae ea voluptatem reprehenderit incidunt
-      dignissimos illum sint eveniet corporis quod officia obcaecati deserunt,
-      quo praesentium enim alias repudiandae. Quo pariatur, dolorum vero rem
-      quam accusamus explicabo repudiandae, vitae quibusdam cupiditate neque
-      quasi non in vel id ipsam debitis officia ea, totam reiciendis similique.
-      Enim minus, ipsa nisi molestias itaque laboriosam? Rerum expedita
-      repellat, id minima iste illo laboriosam tempore deleniti incidunt!
-      Debitis ipsam nisi repellendus nihil. Eius, doloribus repellat. Maxime in
-      architecto sint, nobis voluptatibus quam voluptatum praesentium et
-      doloremque alias. A alias ipsam similique commodi dicta magnam minima
-      voluptate, mollitia maiores accusantium. Velit est minus, distinctio nam
-      voluptas, corrupti ad nemo et autem reprehenderit eaque consectetur
-      deserunt accusamus sit. Hic magnam minima ipsa, error eaque quod similique
-      suscipit illo perferendis, eos omnis ipsam animi? Facilis incidunt
-      voluptatem numquam assumenda blanditiis laudantium nihil ducimus
-      laboriosam sunt est culpa a, architecto animi inventore deserunt et fugit.
-      Eveniet provident doloremque, quibusdam unde, deleniti doloribus aut
-      distinctio, placeat totam ea laboriosam minus! Quam omnis dolore optio
-      illo cupiditate vitae eligendi possimus minus! Distinctio magni possimus
-      vero earum eum velit atque molestias? Officia ex consectetur assumenda
-      debitis obcaecati alias, quidem, nam ipsam maiores magni hic rerum.
-      Doloremque non vel tempore sunt soluta eius corrupti nulla magni? Hic iste
-      neque officiis a modi quo eos expedita, ab optio. Explicabo pariatur,
-      nostrum ab ex quaerat dolorum culpa enim perferendis dolorem atque,
-      obcaecati nemo numquam! Dolor, quo! Doloribus officia veniam, labore
-      debitis quibusdam ea facilis itaque eum vel modi corporis eius repellendus
-      vitae magnam rerum ab, odit saepe, veritatis ipsa velit aut asperiores?
-      Similique ipsam atque pariatur nulla exercitationem, ipsum consequatur
-      unde inventore laudantium repudiandae perspiciatis laborum est. Iste dolor
-      fugit laudantium in sunt facilis, temporibus doloribus aspernatur tempora,
-      quo voluptatibus quisquam rerum magni labore a cum at nulla! Quas animi
-      dolorem eaque, doloribus obcaecati aperiam recusandae incidunt officiis
-      similique provident omnis in debitis exercitationem atque ipsum nesciunt
-      architecto quam nam nisi minima veniam praesentium doloremque? Veniam
-      eveniet repellendus error assumenda asperiores similique ipsa dolorum sint
-      eius cum animi necessitatibus, magni esse delectus, minus mollitia saepe.
-      Laborum quod dignissimos temporibus ipsa provident ipsum animi aspernatur
-      repellendus doloremque excepturi, natus veniam cum, maxime tempore
-      distinctio quibusdam nulla vero asperiores iusto officiis molestiae
-      consectetur vitae neque! Architecto deleniti quasi est vitae quam esse,
-      veniam molestias veritatis nam maiores modi repellat, similique cum iure
-      culpa praesentium, reprehenderit error accusantium! Assumenda distinctio,
-      alias illum, beatae modi dolore nemo amet, voluptatibus aut saepe sunt
-      consequatur! Quis perspiciatis ad repudiandae debitis, inventore aut
-      provident iusto voluptas, repellat sunt doloremque quo eos, tenetur
-      impedit ipsa optio alias quasi. Facere, inventore iste ad dolorem modi
-      maiores quisquam veritatis odit exercitationem cum, aspernatur hic sit
-      perferendis libero? Pariatur unde aperiam non voluptatum commodi, corrupti
-      impedit harum voluptate voluptas id, tempore debitis ipsum expedita
-      suscipit eos a ullam nostrum vitae! Pariatur velit expedita quos quo
-      obcaecati rem incidunt omnis illum magni repellendus, odio tenetur amet
-      ipsa totam ea quis eaque nemo magnam fugiat nulla repellat. Enim tempora
-      necessitatibus quaerat dolorum aliquam, molestias vel, alias libero est
-      placeat voluptatem laudantium qui velit odit fugiat ad laborum temporibus.
-      Veritatis iure, nulla quia dolores deleniti ex soluta recusandae tempore
-      totam quibusdam praesentium quod a molestiae consequatur modi
-      necessitatibus laborum, maiores esse assumenda! Obcaecati, sint optio
-      expedita nulla, at voluptates eos culpa, fuga similique dignissimos itaque
-      natus quidem beatae impedit aut blanditiis fugit eligendi adipisci quasi
-      quaerat consequuntur totam voluptas? Culpa neque recusandae eligendi vero,
-      molestias saepe fugiat exercitationem vitae inventore velit, quos
-      obcaecati impedit a cumque, voluptate assumenda reprehenderit. Excepturi
-      modi neque quae? Est doloribus placeat, aliquid corrupti incidunt
-      voluptatem repellendus maxime deserunt explicabo magnam, ut, delectus
-      nulla molestiae! Ratione, labore. Deserunt, quos eligendi magni sed
-      quaerat voluptas quas aliquid voluptatem pariatur est itaque veniam
-      accusamus eos labore mollitia tenetur eius laboriosam blanditiis incidunt
-      veritatis tempore deleniti reprehenderit temporibus. Nisi unde debitis
-      harum id ducimus similique officia exercitationem quis consectetur saepe
-      corrupti obcaecati est sunt, provident eaque, nihil accusantium ipsum sit
-      dignissimos qui suscipit ex laborum rerum ea? Ipsam error vel illo velit
-      culpa corporis iste at! Aspernatur sapiente fugiat hic officia maxime
-      tempore autem similique ipsa, sed, incidunt a illo eaque temporibus! Totam
-      nulla amet, ea pariatur impedit aliquid odit, error voluptatibus
-      cupiditate quo dolore perferendis adipisci eligendi nobis rerum doloribus
-      laudantium quod architecto itaque dolorum ratione tempore rem? Sapiente
-      explicabo praesentium impedit alias reiciendis expedita, blanditiis
-      facilis ipsam, provident culpa aspernatur possimus nostrum dolorem quasi
-      ut voluptatum illo eaque recusandae eveniet itaque tempora vero ea quod
-      excepturi. Voluptatibus rem obcaecati consectetur harum eum asperiores
-      necessitatibus quis eaque porro doloribus nisi culpa cumque facere neque,
-      in labore vero nemo temporibus iure? Neque excepturi, facere, ut ex
-      perspiciatis tempore aperiam accusamus molestias magni at inventore
-      blanditiis aliquid qui dignissimos! Maxime vero voluptatum esse ullam
-      reiciendis quia saepe vitae consequuntur similique sint, ut a, aliquam
-      nisi neque eos. Enim, ipsa possimus reiciendis accusamus laboriosam,
-      aliquid expedita quaerat voluptatem natus optio quidem incidunt eos et est
-      dicta earum libero tempora officia sunt quia quod, explicabo fuga
-      voluptates. Voluptas maxime laboriosam asperiores impedit, natus
-      reiciendis dignissimos at dicta nesciunt harum magni, omnis maiores
-      perferendis! At placeat maiores quibusdam doloribus, facilis minus
-      consequatur facere commodi officiis, voluptate recusandae quod nesciunt
-      fugit hic odio magnam eius dolorum tempora, sed libero nobis! Perspiciatis
-      ut a architecto beatae numquam dolorem consectetur. Eum a id delectus
-      dignissimos quo! Debitis dolorem iure, aut ab ea quis illo dolor totam
-      odio aliquid ullam fuga fugit libero architecto laudantium consequatur
-      molestiae doloremque. Necessitatibus vero pariatur blanditiis nihil
-      similique molestiae. Officiis, consequatur cumque in laudantium sit beatae
-      expedita eum debitis perspiciatis voluptates magni dolorum alias mollitia
-      officia deleniti id iusto modi odit accusantium vero asperiores neque.
-      Blanditiis quod facere nisi recusandae deserunt autem fuga voluptatum
-      totam quia iusto, illo magni nesciunt fugiat, quidem at optio sequi,
-      perferendis asperiores eaque. Illum odit voluptas, id assumenda, quam nam
-      officia, libero corrupti non nisi accusamus. Fugiat maxime, magni ducimus,
-      amet veniam repellat voluptatibus deleniti magnam, culpa et veritatis.
-      Voluptas ad dolorem facilis unde et veniam, deserunt soluta explicabo sit
-      architecto doloribus quod, asperiores cumque illo odit atque ratione magni
-      culpa.
-    </div>
+    <div id="content" class="content"></div>
     <script src="./kins-page/main.js"></script>
   </body>
 </html>
