update sidebar display

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div id="header" class="header unselectable">
       <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
     </div>
-    <div class="sidebar-container">
-      <div class="arrow"><i class="fa fa-chevron-right"></i></div>
+    <div class="sidebar-container" id='sidebar-container'>
+      <div class="arrow" id="sidebar-arrow"><i class="fa fa-chevron-right"></i></div>
       <div id="sidebar" class="sidebar hide-scrollbar"></div>
     </div>
 
