add vanilla link

--- a/index.html
+++ b/index.html
@@ -16,12 +16,22 @@
   </head>
 
   <body class="hide-scrollbar" id="body">
-    <h1 class="site-title unselectable" id="site-title">Kin's Page</h1>
+    <h1 class="site-title unselectable" id="site-title">Kin's Memo</h1>
+    <a
+      class="site-link-title unselectable"
+      id="site-link-title"
+      href="./Vanilla/index.html"
+      target="_blank"
+    >
+      Mini Javascript Projects
+    </a>
     <div id="header" class="header unselectable">
       <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
     </div>
-    <div class="sidebar-container" id='sidebar-container'>
-      <div class="arrow" id="sidebar-arrow"><i class="fa fa-chevron-right"></i></div>
+    <div class="sidebar-container" id="sidebar-container">
+      <div class="arrow" id="sidebar-arrow">
+        <i class="fa fa-chevron-right"></i>
+      </div>
       <div id="sidebar" class="sidebar hide-scrollbar"></div>
     </div>
 
