faq collapse done

--- a/Vanilla/FAQ-Collapse/index.html
+++ b/Vanilla/FAQ-Collapse/index.html
@@ -19,10 +19,10 @@
       <div class="header">Frequently Asked Questions</div>
       <div class="box active">
         <div class="q">
-          What is 1+1?
+          Why shouldn't we trust atoms?
         </div>
         <div class="a">
-          2
+          Because they make up everything.
         </div>
         <div class="close btn"><i class="fas fa-close"></i></div>
         <div class="expand btn"><i class="fas fa-chevron-down fa-sm"></i></div>
@@ -33,6 +33,16 @@
         </div>
         <div class="a">
           2
+        </div>
+        <div class="close btn"><i class="fas fa-close"></i></div>
+        <div class="expand btn"><i class="fas fa-chevron-down fa-sm"></i></div>
+      </div>
+      <div class="box">
+        <div class="q">
+          Other Questions?
+        </div>
+        <div class="a">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod delectus ipsum eveniet labore. Minus inventore asperiores nisi officiis vel aut. Voluptates consequatur repellendus consectetur porro unde deleniti laudantium doloribus dicta mollitia? Ratione libero consequatur obcaecati delectus in sunt sed unde adipisci eaque debitis, totam laboriosam sequi autem cumque quaerat mollitia.
         </div>
         <div class="close btn"><i class="fas fa-close"></i></div>
         <div class="expand btn"><i class="fas fa-chevron-down fa-sm"></i></div>
